desabilitada a função de localStorage

--- a/API/templates/index.html
+++ b/API/templates/index.html
@@ -97,7 +97,7 @@
             }
         });
 
-        buscarDadosLocalStorage();
+        // buscarDadosLocalStorage();
     })
 
     function buscarCidades(estado) {
