--- a/API/templates/index.html
+++ b/API/templates/index.html
@@ -11,6 +11,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <link rel="icon" href="/previsao/static/imagens/favicon.ico" type="image/x-icon">
     <title>Previsão do Tempo</title>
 </head>
 
